Fix of logo shift weirdness on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -66,10 +66,6 @@ a.download { font-weight:bold; text-decoration:none; }
 
 .nothing { color:#fd9632; color:#e92c31; }
 
-@media (max-width:768px) {
-	.form-inline .btn { display:block; width:100%; }
-}
-
 /*---*/
 
 .site-nav { font-size:0.8em; display:inline-block; float:right; }
@@ -84,7 +80,7 @@ a.download { font-weight:bold; text-decoration:none; }
 
 header { padding-top:3em; padding-bottom:2em; }
 
-#logo { width:225px; height:50px; position:relative; top:-16px; left:8px; }
+#logo { width:225px; height:50px; position:relative; left:8px; }
 
 .navbar-header { z-index:100; position:relative; }
 
@@ -113,14 +109,15 @@ header { padding-top:3em; padding-bottom:2em; }
 .subnav.affix-bottom { position:absolute; margin-top:0; }
 
 @media (min-width:768px) {
+	#logo { top:-16px; }
 	#nav-links { top:0px; font-size:inherit; }
 }
 
 /* --- */
 
-section.blue { padding:20px 0 20px; min-height:360px; background:#25aae1; color:#fff; }
-	section.blue.airplane { background:#25aae1 url(../img/bg-airplane.png?v=4) center bottom no-repeat; }
-	section.blue.thinker { background:#25aae1 url(../img/bg-thinker.png?v=4) center bottom no-repeat; }
+section.blue { padding:20px 0 20px; background:#25aae1; color:#fff; }
+	section.blue.airplane { background:#25aae1; }
+	section.blue.thinker { background:#25aae1; }
 	section.blue h1, section.blue h2, section.blue h3, section.blue h4, section.blue h5, section.blue h6 { color:#fff; }
 	section.blue p { color:#def; } 
 
@@ -156,10 +153,10 @@ div.portal .glyphicon { float:right; margin-right:15px; color:#25aae1; }
 .code-sample { position:relative; left:-16px; border:1px solid #bbb; border-top:none; padding:15px; word-wrap:normal; border-bottom-right-radius:3px; border-bottom-left-radius:3px; }
 	.code-sample pre { border:none !important; background:transparent !important; overflow-x:scroll; margin:0; padding:0; }
 
-@media (max-width:768px) {
-	section.blue { min-height:0; }
-		section.blue.airplane { background-image:none; }
-		section.blue.thinker { background-image:none; }
+@media (min-width:768px) {
+	section.blue { min-height:360px; }
+		section.blue.airplane { background:#25aae1 url(../img/bg-airplane.png?v=4) center bottom no-repeat }
+		section.blue.thinker { background:#25aae1 url(../img/bg-thinker.png?v=4) center bottom no-repeat; }
 }
 
 /* --- */
